--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -72,7 +72,7 @@
 }
 
 .cubes-background {
-  background-image: url(../images/docker.svg);
+  background-image: url("../images/edge-3.svg");
   filter: hue-rotate(-6deg) opacity(0.95);
   width: 100%;
   min-height: 90vh;
@@ -92,15 +92,16 @@
 }
 
 .hero-title {
-  color: #fff;
+  color: #1A237E;
   font-family: "TT Commons DemiBold";
   letter-spacing: 0.25px;
   font-size: 4rem;
+  line-height: normal;
   margin-top: 8rem;
 }
 
 .hero-subtitle {
-  color: #fff;
+  color: #1A237E;
   font-family: "TT Commons Regular";
   font-size: 2rem;
 }
@@ -149,6 +150,11 @@
   line-height: 24px;
   letter-spacing: -0.25px;
   transition: all 0.3s ease;
+}
+
+.blue-shadow {
+  box-shadow: 0 4px 30px #0080f723,
+    0 -2px 5px #0080f707;
 }
 
 .arrow-link:hover {
@@ -355,7 +361,6 @@ img {
   and (max-device-width: 812px)
   and (-webkit-min-device-pixel-ratio: 3) {
     .hero-title {
-      color: #fff;
       font-family: "TT Commons DemiBold";
       letter-spacing: 0.25px;
       font-size: 3rem;
@@ -410,19 +415,16 @@ img {
   and (max-device-width: 896px)
   and (-webkit-min-device-pixel-ratio: 2) {
     .hero-title {
-      color: #fff;
       font-family: "TT Commons DemiBold";
       letter-spacing: 0.25px;
       font-size: 3rem;
       margin-top: 3rem;
-      line-height: 1;
     }
   
     .hero-subtitle {
-      color: #fff;
       font-family: "TT Commons Regular";
       font-size: 1.5rem;
-      line-height: 1;
+      line-height: 1.75rem;
       margin-top: 1rem;
       margin-bottom: 1rem;
     }
@@ -472,7 +474,6 @@ img {
   and (max-device-width: 736px)
   and (-webkit-min-device-pixel-ratio: 3) {
     .hero-title {
-      color: #fff;
       font-family: "TT Commons DemiBold";
       letter-spacing: 0.25px;
       font-size: 2.75rem;
@@ -481,7 +482,6 @@ img {
     }
   
     .hero-subtitle {
-      color: #fff;
       font-family: "TT Commons Regular";
       font-size: 1.25rem;
       line-height: 1.25;
@@ -503,7 +503,6 @@ img {
 /* iPad in portrait */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) { 
   .hero-title {
-    color: #fff;
     font-family: "TT Commons DemiBold";
     letter-spacing: 0.25px;
     font-size: 3rem;
@@ -512,7 +511,6 @@ img {
   }
 
   .hero-subtitle {
-    color: #fff;
     font-family: "TT Commons Regular";
     font-size: 1.5rem;
     line-height: 1;
