--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,6 +92,16 @@
   background-repeat: no-repeat;
 }
 
+.background-3 {
+  background-image: url("../images/edge-7.svg");
+  filter: hue-rotate(0deg) opacity(0.9);
+  width: 100%;
+
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .below-hero {
   background-image: url("./../images/gray-right.svg");
   width: 100%;
@@ -102,7 +112,7 @@
 }
 
 .hero-title {
-  color: #1A237E;
+  color: #1a237e;
   font-family: "TT Commons DemiBold";
   letter-spacing: 0.25px;
   font-size: 4rem;
@@ -111,7 +121,7 @@
 }
 
 .hero-subtitle {
-  color: #1A237E;
+  color: #1a237e;
   font-family: "TT Commons Regular";
   font-size: 2rem;
 }
@@ -163,13 +173,12 @@
 }
 
 .blue-shadow {
-  box-shadow: 0 4px 30px #0080f723,
-    0 -2px 5px #0080f707;
+  box-shadow: 0 4px 30px #0080f723, 0 -2px 5px #0080f707;
 }
 
 .shadow {
   box-shadow: 0 4px 30px rgba(11, 33, 74, 0.11),
-  0 -2px 5px rgba(11, 33, 74, 0.03);
+    0 -2px 5px rgba(11, 33, 74, 0.03);
 }
 
 .arrow-link:hover {
@@ -306,11 +315,11 @@ p {
 .footer-link {
   margin-bottom: 0.5rem;
   display: block;
-  color: #C5CAE9;
+  color: #c5cae9;
 }
 
 .footer-link:hover {
-  color: #C5CAE9;
+  color: #c5cae9;
   text-decoration: underline;
 }
 
@@ -323,7 +332,6 @@ p {
 }
 
 .mobile-hide {
-
 }
 
 .grid-box {
@@ -346,8 +354,7 @@ img {
 .page-title {
   color: #0b214a;
   font-weight: 600;
-  line-height: 72px;
-  letter-spacing: -.25px;
+  line-height: normal;
 }
 
 .pricing-card-1 {
@@ -372,6 +379,41 @@ img {
 
 .d {
   border: 1px solid red;
+}
+
+.faq-field:hover {
+  background-color: rgb(245, 245, 245);
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.faq-icon {
+  margin-bottom: -7px;
+  margin-right: 1rem;
+  transition: all 0.3s ease;
+}
+
+.faq-icon-rotate {
+  transform: rotate(-45deg);
+}
+
+.image-render {
+  image-rendering: -moz-crisp-edges; /* Firefox */
+  image-rendering: -o-crisp-edges; /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
+}
+
+.img-teams-1 {
+  background-image: url("./../images/dashboard/teams.png");
+  background-size: 100% 320px;
+  width: 100%;
+  height: 320px;
+}
+
+.color-dark-blue {
+  color: #0b214a;
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
@@ -402,181 +444,184 @@ img {
 }
 
 /* iPhone X, XS, 11 Pro */
-@media only screen
-  and (min-device-width: 375px)
-  and (max-device-width: 812px)
-  and (-webkit-min-device-pixel-ratio: 3) {
-    .hero-title {
-      font-family: "TT Commons DemiBold";
-      letter-spacing: 0.25px;
-      font-size: 3rem;
-      margin-top: 3rem;
-    }
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
+  .hero-title {
+    font-family: "TT Commons DemiBold";
+    letter-spacing: 0.25px;
+    font-size: 3rem;
+    margin-top: 3rem;
+  }
 
-    .hero-card-title {
-      font-size: 1.35rem;
-    }
-  
-    .hero-subtitle {
-      font-family: "TT Commons Regular";
-      font-size: 1.5rem;
-      line-height: 1.75rem;
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-    }
-  
-    .mobile-hide {
-      display: none;
-    }
+  .hero-card-title {
+    font-size: 1.35rem;
+  }
 
-    .box {
-      background: #fff;
-      padding: 2rem;
-      box-shadow: none;
-      border-radius: 4px;
-    }
+  .hero-subtitle {
+    font-family: "TT Commons Regular";
+    font-size: 1.5rem;
+    line-height: 1.75rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
 
-    .grid-box {
-      padding: 1rem;
-    }
+  .mobile-hide {
+    display: none;
+  }
 
-    .gutterTop {
-      margin-top: 1rem;
-    }
+  .box {
+    background: #fff;
+    padding: 2rem;
+    box-shadow: none;
+    border-radius: 4px;
+  }
 
-    .gutterBottom {
-      padding-bottom: 4rem;
-    }
+  .grid-box {
+    padding: 1rem;
+  }
 
-    .footer-title {
-      font-size: 2.5rem;
-      line-height: 48px;
-      letter-spacing: -2px;
-      margin-top: 4rem;
-    }
+  .gutterTop {
+    margin-top: 1rem;
+  }
 
-    .grid-subtitle {
-      line-height: 1.75rem;
-    }
+  .gutterBottom {
+    padding-bottom: 4rem;
+  }
 
-    .logo-light-sm {
-      margin-left: -7px;
-    }
+  .footer-title {
+    font-size: 2.5rem;
+    line-height: 48px;
+    letter-spacing: -2px;
+    margin-top: 4rem;
+  }
+
+  .grid-subtitle {
+    line-height: 1.75rem;
+  }
+
+  .logo-light-sm {
+    margin-left: -7px;
+  }
+
+  .background-2 {
+    background-image: url("../images/edge-6.svg");
+    filter: hue-rotate(0deg) opacity(0.9);
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 }
 
 /* iPhone XS Max, 11 Pro Max */
-@media only screen
-  and (min-device-width: 414px)
-  and (max-device-width: 896px)
-  and (-webkit-min-device-pixel-ratio: 3) {
-
+@media only screen and (min-device-width: 414px) and (max-device-width: 896px) and (-webkit-min-device-pixel-ratio: 3) {
 }
 
 /* iPhone XR, 11 */
-@media only screen
-  and (min-device-width: 414px)
-  and (max-device-width: 896px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-    .hero-title {
-      font-family: "TT Commons DemiBold";
-      letter-spacing: 0.25px;
-      font-size: 3rem;
-      margin-top: 3rem;
-    }
+@media only screen and (min-device-width: 414px) and (max-device-width: 896px) and (-webkit-min-device-pixel-ratio: 2) {
+  .hero-title {
+    font-family: "TT Commons DemiBold";
+    letter-spacing: 0.25px;
+    font-size: 3rem;
+    margin-top: 3rem;
+  }
 
-    .hero-card-title {
-      font-size: 1.35rem;
-    }
-  
-    .hero-subtitle {
-      font-family: "TT Commons Regular";
-      font-size: 1.5rem;
-      line-height: 1.75rem;
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-    }
-  
-    .mobile-hide {
-      display: none;
-    }
+  .hero-card-title {
+    font-size: 1.35rem;
+  }
 
-    .box {
-      background: #fff;
-      padding: 2rem;
-      box-shadow: none;
-      border-radius: 4px;
-    }
+  .hero-subtitle {
+    font-family: "TT Commons Regular";
+    font-size: 1.5rem;
+    line-height: 1.75rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
 
-    .grid-box {
-      padding: 1rem;
-    }
+  .mobile-hide {
+    display: none;
+  }
 
-    .gutterTop {
-      margin-top: 1rem;
-    }
+  .box {
+    background: #fff;
+    padding: 2rem;
+    box-shadow: none;
+    border-radius: 4px;
+  }
 
-    .gutterBottom {
-      padding-bottom: 4rem;
-    }
+  .grid-box {
+    padding: 1rem;
+  }
 
-    .footer-title {
-      font-size: 2.5rem;
-      line-height: 48px;
-      letter-spacing: -2px;
-      margin-top: 4rem;
-    }
+  .gutterTop {
+    margin-top: 1rem;
+  }
 
-    .grid-subtitle {
-      line-height: 1.75rem;
-    }
+  .gutterBottom {
+    padding-bottom: 4rem;
+  }
 
-    .logo-light-sm {
-      margin-left: -7px;
-    }
+  .footer-title {
+    font-size: 2.5rem;
+    line-height: 48px;
+    letter-spacing: -2px;
+    margin-top: 4rem;
+  }
+
+  .grid-subtitle {
+    line-height: 1.75rem;
+  }
+
+  .logo-light-sm {
+    margin-left: -7px;
+  }
+
+  .page-title {
+    letter-spacing: -2px;
+  }
+
+  .background-2 {
+    background-image: url("../images/edge-6.svg");
+    filter: hue-rotate(0deg) opacity(0.9);
+    width: 100%;
+    background-size: 200px 200px;
+    background-repeat: no-repeat;
+  }
 }
 
 /* iPhone 6, 6S, 7, 8 */
-@media only screen
-  and (min-device-width: 375px)
-  and (max-device-width: 667px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
 }
 
 /* iPhone 6 Plus, 6S Plus, 7 Plus, 8 Plus */
-@media only screen
-  and (min-device-width: 414px)
-  and (max-device-width: 736px)
-  and (-webkit-min-device-pixel-ratio: 3) {
-    .hero-title {
-      font-family: "TT Commons DemiBold";
-      letter-spacing: 0.25px;
-      font-size: 2.75rem;
-      margin-top: 0.5rem;
-      line-height: 1;
-    }
-  
-    .hero-subtitle {
-      font-family: "TT Commons Regular";
-      font-size: 1.25rem;
-      line-height: 1.25;
-      margin-top: 0rem;
-      margin-bottom: 0rem;
-    }
-  
-    .mobile-hide {
-      display: none;
-    }
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+  .hero-title {
+    font-family: "TT Commons DemiBold";
+    letter-spacing: 0.25px;
+    font-size: 2.75rem;
+    margin-top: 0.5rem;
+    line-height: 1;
+  }
 
-    .box {
-      background: #fff;
-      padding: 2rem;
-      box-shadow: none;
-      border-radius: 4px;
-    }
+  .hero-subtitle {
+    font-family: "TT Commons Regular";
+    font-size: 1.25rem;
+    line-height: 1.25;
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+  }
+
+  .mobile-hide {
+    display: none;
+  }
+
+  .box {
+    background: #fff;
+    padding: 2rem;
+    box-shadow: none;
+    border-radius: 4px;
+  }
 }
 /* iPad in portrait */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) { 
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
   .hero-title {
     font-family: "TT Commons DemiBold";
     letter-spacing: 0.25px;
@@ -596,4 +641,4 @@ img {
   .mobile-hide {
     display: block;
   }
-} 
+}
