--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -269,7 +269,7 @@ p {
   text-align: center;
   border: 2px solid #0073ec;
   box-sizing: border-box;
-  border-radius: 4px;
+  border-radius: 50px;
   height: 54px;
   min-width: 196px;
   padding: 16px 18px 18px;
@@ -290,6 +290,33 @@ p {
   background-color: #0162cc;
   color: #fff;
   text-decoration: none;
+}
+
+.button-outline-lg {
+  box-shadow: none;
+  background-image: unset;
+  text-align: center;
+  border: 2px solid #0073ec;
+  box-sizing: border-box;
+  border-radius: 50px;
+  height: 54px;
+  min-width: 196px;
+  padding: 16px 18px 18px;
+  background-color: none;
+  font-size: 17px;
+  color: #0073ec;
+  line-height: 20px;
+  letter-spacing: 0.25px;
+  letter-spacing: -0.25px;
+  position: relative;
+  display: inline-block;
+  font-family: "TT Commons Medium";
+  transition: all 0.3s ease;
+}
+
+.button-outline-lg:hover {
+  color: #fff;
+  background-color: #0073ec;
 }
 
 .t1 {
